Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -470,33 +470,33 @@ test_cases:
     KIA_TPMS_PRESS_RR: 0.8
     KIA_TPMS_TEMP_FL: 79
     KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RL: 73
     KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 37.8
-    KIA_TP_FL_PRE21: 37.8
-    KIA_TP_FR: 15.8
-    KIA_TP_FR_PRE21: 37.4
+    KIA_TP_FL: 37.6
+    KIA_TP_FL_PRE21: 37.6
+    KIA_TP_FR: 15.6
+    KIA_TP_FR_PRE21: 37
     KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 41
+    KIA_TP_RL_PRE21: 40.8
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 37.4
+    KIA_TP_RR_PRE21: 37.6
     KIA_TT_FL: 29
     KIA_TT_FL_PRE21: 29
     KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 29
+    KIA_TT_FR_PRE21: 28
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 28
-    KIA_TT_RR: 24
-    KIA_TT_RR_PRE21: 29
+    KIA_TT_RL_PRE21: 27
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 28
     KIA_TW_FL: 0
     KIA_TW_FR: 1
     KIA_TW_RL: 1
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180BD4F0400BB4F
-    7A8220400BB4F0400CD
-    7A8234E04004A9AB19A
+    7A82180BC4F0400B94E
+    7A8220400BC4E0400CC
+    7A8234D0400499BB19A
     7A824B1A3BBA1B9AAAA
 - expected_values:
     KIA_FL_INVALID: 0
@@ -696,36 +696,74 @@ test_cases:
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 88
+    KIA_TPMS_TEMP_FL: 87
     KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RL: 73
     KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 39
-    KIA_TP_FL_PRE21: 39
-    KIA_TP_FR: 17.4
-    KIA_TP_FR_PRE21: 38.6
+    KIA_TP_FL: 38.8
+    KIA_TP_FL_PRE21: 38.8
+    KIA_TP_FR: 17
+    KIA_TP_FR_PRE21: 38
     KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 42.6
+    KIA_TP_RL_PRE21: 42.8
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 39.4
-    KIA_TT_FL: 38
-    KIA_TT_FL_PRE21: 38
+    KIA_TP_RR_PRE21: 39
+    KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
     KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 37
+    KIA_TT_FR_PRE21: 35
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 39
-    KIA_TT_RR: 24
-    KIA_TT_RR_PRE21: 39
+    KIA_TT_RL_PRE21: 38
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 38
     KIA_TW_FL: 0
     KIA_TW_FR: 1
     KIA_TW_RL: 1
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180C3580600C157
-    7A8220600C5590600D5
-    7A8235906004AA0B89F
-    7A824B7A9C3A9C3AAAA
+    7A82180C2570600BE55
+    7A8220600C3580600D6
+    7A82358060049A0B89F
+    7A824B6A9C3A9C3AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 87
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: 73
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39
+    KIA_TP_FL_PRE21: 39
+    KIA_TP_FR: 17.4
+    KIA_TP_FR_PRE21: 38.6
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 42.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 37
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 40
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 41
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3570600C157
+    7A8220600C55B0600D6
+    7A8235A060049A0B8A0
+    7A824B8ABC6AAC5AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
@@ -736,12 +774,50 @@ test_cases:
     KIA_TPMS_PRESS_RR: 1.2
     KIA_TPMS_TEMP_FL: 88
     KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RL: 73
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 39
     KIA_TP_FL_PRE21: 39
-    KIA_TP_FR: 17.6
+    KIA_TP_FR: 17.4
     KIA_TP_FR_PRE21: 38.6
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 43.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.6
+    KIA_TT_FL: 38
+    KIA_TT_FL_PRE21: 38
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 37
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 41
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 40
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3580600C157
+    7A8220600C65A0600DA
+    7A8235B060049A0B8A0
+    7A824B8AAC5ABC6AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 88
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: 73
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39.4
+    KIA_TP_FL_PRE21: 39.4
+    KIA_TP_FR: 17.6
+    KIA_TP_FR_PRE21: 39
     KIA_TP_RL: 1.2
     KIA_TP_RL_PRE21: 43.4
     KIA_TP_RR: 0
@@ -751,19 +827,19 @@ test_cases:
     KIA_TT_FR: -44
     KIA_TT_FR_PRE21: 38
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 40
-    KIA_TT_RR: 24
-    KIA_TT_RR_PRE21: 41
+    KIA_TT_RL_PRE21: 41
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 42
     KIA_TW_FL: 0
     KIA_TW_FR: 1
     KIA_TW_RL: 1
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180C3580600C158
-    7A8220600C75B0600D9
-    7A8235A06004AA0B8A0
-    7A824B8AAC5AAC3AAAA
+    7A82180C5580600C358
+    7A8220600C75C0600D9
+    7A8235B060049A0B8A0
+    7A824B8ABC7ABC6AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
@@ -772,25 +848,25 @@ test_cases:
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 88
+    KIA_TPMS_TEMP_FL: 89
     KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RL: 73
     KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 39
-    KIA_TP_FL_PRE21: 39
-    KIA_TP_FR: 17.8
-    KIA_TP_FR_PRE21: 39
+    KIA_TP_FL: 39.4
+    KIA_TP_FL_PRE21: 39.4
+    KIA_TP_FR: 17.6
+    KIA_TP_FR_PRE21: 38.6
     KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 43.6
+    KIA_TP_RL_PRE21: 43.4
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 39.6
-    KIA_TT_FL: 38
-    KIA_TT_FL_PRE21: 38
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 39
+    KIA_TT_FL_PRE21: 39
     KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 39
+    KIA_TT_FR_PRE21: 38
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 41
-    KIA_TT_RR: 24
+    KIA_TT_RL_PRE21: 42
+    KIA_TT_RR: 23
     KIA_TT_RR_PRE21: 40
     KIA_TW_FL: 0
     KIA_TW_FR: 1
@@ -798,10 +874,10 @@ test_cases:
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180C3580600C359
-    7A8220600C65A0600DA
-    7A8235B06004AA0B8A0
-    7A824B8AAC3AAC5AAAA
+    7A82180C5590600C158
+    7A8220600C55A0600D9
+    7A8235C060049A1B9A0
+    7A824B8AAC5ABC7AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
