Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -614,6 +614,43 @@ test_cases:
     7A824B987AF87AFAAAA
 - expected_values:
     KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1
+    KIA_TPMS_TEMP_FL: 87
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 73
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 38.6
+    KIA_TP_FL_PRE21: 38.6
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 1
+    KIA_TP_RL_PRE21: 42.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
+    KIA_TT_FR: -50
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 38
+    KIA_TT_RR: 23
+    KIA_TT_RR_PRE21: 42
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C15704000000
+    7A8220002C55C0500D4
+    7A82358050049A0B896
+    7A824ABABC7A9C3AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
     KIA_RL_INVALID: 0
     KIA_RR_INVALID: 0
@@ -688,44 +725,6 @@ test_cases:
     7A8220600BC520600BD
     7A823520600468FB98F
     7A824B987AF87AFAAAA
-- expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 87
-    KIA_TPMS_TEMP_FR: 6
-    KIA_TPMS_TEMP_RL: 73
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 38.8
-    KIA_TP_FL_PRE21: 38.8
-    KIA_TP_FR: 17
-    KIA_TP_FR_PRE21: 38
-    KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 42.8
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 39
-    KIA_TT_FL: 37
-    KIA_TT_FL_PRE21: 37
-    KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 35
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 38
-    KIA_TT_RR: 23
-    KIA_TT_RR_PRE21: 38
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
-    7A82180C2570600BE55
-    7A8220600C3580600D6
-    7A82358060049A0B89F
-    7A824B6A9C3A9C3AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
