Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.0131.yaml
+++ b/tests/test_cases/2023/commands/7E0.0131.yaml
@@ -10,5 +10,5 @@ test_cases:
     CLR_DIST: 4352
   response: '7E80441311100'
 - expected_values:
-    CLR_DIST: 25856
-  response: '7E80441316500'
+    CLR_DIST: 26296
+  response: 7E804413166B8
