Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,21 +1,38 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
-    KIA_HVAC_AAT: -10.5
-    KIA_HVAC_EVAPORATOR_T: -7.5
-    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 60
-    KIA_HVAC_IAT: -8.5
+    KIA_HVAC_AAT: -13.5
+    KIA_HVAC_EVAPORATOR_T: -10.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 59
+    KIA_HVAC_IAT: -11.5
     KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
     KIA_HVAC_IAT_DRIVER_VENT: 87.5
-    KIA_TEMP_EXT: -10.5
-    KIA_TEMP_INT: -8.5
+    KIA_TEMP_EXT: -13.5
+    KIA_TEMP_INT: -11.5
     KIA_VSS: 0
   response: |-
     7BB10256201007F901E
-    7BB2168FF3F3B4106EF
-    7BB22C406EFFFFF0FFF
+    7BB2168FF39353B05EF
+    7BB22C505EFFFFF0FFF
     7BB23FFFFFFFFFFFFAE
-    7BB24793CB8FFFF006F
+    7BB24793BB7FFFF006D
+    7BB25FF00FF00000000
+- expected_values:
+    KIA_HVAC_AAT: -13.5
+    KIA_HVAC_EVAPORATOR_T: -9.5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 71
+    KIA_HVAC_IAT: -8
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
+    KIA_TEMP_EXT: -13.5
+    KIA_TEMP_INT: -8
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF40353D05EF
+    7BB229705EFFFFF0FFF
+    7BB23FFFFFFFFFFFFAE
+    7BB247947B5FFFF007B
     7BB25FF00FF00000000
 - expected_values:
     KIA_HVAC_AAT: -11
