Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -498,6 +498,18 @@ test_cases:
     KIA_IAT: 0
   response: |-
     7E8102D62E0019FB7FF
+    7E82100D1D12D241791
+    7E82200000000C5002A
+    7E8233480322000009B
+    7E8240246FD032F0000
+    7E8250403373C177EFF
+    7E8264054421BAAAAAA
+- expected_values:
+    KIA_EIT: -6.75
+    KIA_EOT: 0
+    KIA_IAT: 0
+  response: |-
+    7E8102D62E0019FB7FF
     7E82100D1D13ECC1481
     7E82200000000A90096
     7E8232AC02C1900007A
