Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -601,6 +601,18 @@ test_cases:
     7E8250A0258AC390000
     7E826401B8305AAAAAA
 - expected_values:
+    KIA_EIT: -7.5
+    KIA_EOT: 0
+    KIA_IAT: 0
+  response: |-
+    7E8102D62E0019FB7FF
+    7E82100D5D535A01795
+    7E82200000000C90012
+    7E823368033210000C0
+    7E8240241FD03310000
+    7E8250D03363708FFFF
+    7E8264057671CAAAAAA
+- expected_values:
     KIA_EIT: 42.75
     KIA_EOT: 95.25358
     KIA_IAT: 42.75227
