Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -868,6 +868,23 @@ test_cases:
     7E82965E3C000000000
     7E82ABEFA9DF4CEDEAA
 - expected_values:
+    KIA_KNOCK_RETARD_1_E019: -1.5
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: -3.75
+    KIA_KNOCK_RETARD_4_E019: -2.25
+  response: |-
+    7E8104B62E019FFE7E7
+    7E821670151004E004D
+    7E822004D00F8FBF6F8
+    7E823F2F70000FDFFFA
+    7E824FCFAFB00001413
+    7E8251815170F0000A1
+    7E82601C50100007E70
+    7E827000000009E000E
+    7E82800000000007DEF
+    7E82958E3C000000000
+    7E82AB2F82CF55FDEAA
+- expected_values:
     KIA_KNOCK_RETARD_1_E019: -0.75
     KIA_KNOCK_RETARD_2_E019: 0
     KIA_KNOCK_RETARD_3_E019: -3
