--- a/tests/test_cases/2020/commands/7E0.0105.yaml
+++ b/tests/test_cases/2020/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: -6
-  response: '7E803410522'
+    ECT: -10
+  response: 7E80341051E
 - expected_values:
     ECT: 109
   response: '7E803410595'
