--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -143,6 +143,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E821670100000100F9
+    7E822FFF9FFFFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000E0D
+    7E825110E0F0D000027
+    7E826026A0100007E70
+    7E8270000000023FF11
+    7E828000000000075EF
+    7E8291EE3C000000000
+    7E82A24F88BF438DFAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E82167010000020075
     7E822FFA1FFFFFFFFFF
     7E823FFFF0000FFFFFF
