Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.0106.yaml
+++ b/tests/test_cases/2020/commands/7E0.0106.yaml
@@ -4,6 +4,9 @@ test_cases:
     SHRTFT1: -6.25
   response: '7E803410678'
 - expected_values:
+    SHRTFT1: -3.90625
+  response: 7E80341067B
+- expected_values:
     SHRTFT1: -3.125
   response: 7E80341067C
 - expected_values:
@@ -18,3 +21,9 @@ test_cases:
 - expected_values:
     SHRTFT1: 2.34375
   response: '7E803410683'
+- expected_values:
+    SHRTFT1: 3.125
+  response: '7E803410684'
+- expected_values:
+    SHRTFT1: 7.8125
+  response: 7E80341068A
