--- a/tests/test_cases/2020/commands/7E0.0121.yaml
+++ b/tests/test_cases/2020/commands/7E0.0121.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     MIL_DIST: 601
   response: '7E80441210259'
+- expected_values:
+    MIL_DIST: 1410
+  response: '7E80441210582'
