--- a/tests/test_cases/2020/commands/7E0.014D.yaml
+++ b/tests/test_cases/2020/commands/7E0.014D.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     MIL_TIME: 1792
   response: 7E804414D0700
+- expected_values:
+    MIL_TIME: 3935
+  response: 7E804414D0F5F
