--- a/tests/test_cases/2020/commands/7E0.0133.yaml
+++ b/tests/test_cases/2020/commands/7E0.0133.yaml
@@ -4,6 +4,9 @@ test_cases:
     BARO: 97
   response: '7E803413361'
 - expected_values:
+    BARO: 98
+  response: '7E803413362'
+- expected_values:
     BARO: 99
   response: '7E803413363'
 - expected_values:
