Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.0109.yaml
+++ b/tests/test_cases/2020/commands/7E0.0109.yaml
@@ -4,6 +4,9 @@ test_cases:
     LONGFT2: -12.5
   response: '7E803410970'
 - expected_values:
+    LONGFT2: -2.34375
+  response: 7E80341097D
+- expected_values:
     LONGFT2: -1.5625
   response: 7E80341097E
 - expected_values:
