--- a/tests/test_cases/2020/commands/7E0.0158.yaml
+++ b/tests/test_cases/2020/commands/7E0.0158.yaml
@@ -4,6 +4,9 @@ test_cases:
     LGSO2FT2: -3.90625
   response: 7E80341587B
 - expected_values:
+    LGSO2FT2: -2.34375
+  response: 7E80341587D
+- expected_values:
     LGSO2FT2: -1.5625
   response: 7E80341587E
 - expected_values:
