--- a/tests/test_cases/2020/commands/7E0.010E.yaml
+++ b/tests/test_cases/2020/commands/7E0.010E.yaml
@@ -7,6 +7,9 @@ test_cases:
     SPARKADV: -0.5
   response: 7E803410E7F
 - expected_values:
+    SPARKADV: 0.5
+  response: 7E803410E81
+- expected_values:
     SPARKADV: 1.5
   response: 7E803410E83
 - expected_values:
