--- a/tests/test_cases/2020/commands/7E0.012E.yaml
+++ b/tests/test_cases/2020/commands/7E0.012E.yaml
@@ -7,6 +7,9 @@ test_cases:
     EVAP_PCT: 8.62745
   response: 7E803412E16
 - expected_values:
+    EVAP_PCT: 11.76471
+  response: 7E803412E1E
+- expected_values:
     EVAP_PCT: 23.52941
   response: 7E803412E3C
 - expected_values:
