--- a/tests/test_cases/2020/commands/7E0.0156.yaml
+++ b/tests/test_cases/2020/commands/7E0.0156.yaml
@@ -4,6 +4,9 @@ test_cases:
     LGSO2FT1: -4.6875
   response: 7E80341567A
 - expected_values:
+    LGSO2FT1: -3.90625
+  response: 7E80341567B
+- expected_values:
     LGSO2FT1: -3.125
   response: 7E80341567C
 - expected_values:
