--- a/tests/test_cases/2020/commands/7E0.018E.yaml
+++ b/tests/test_cases/2020/commands/7E0.018E.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.018E
 test_cases:
 - expected_values:
+    TQ_FR: 8
+  response: 7E803418E85
+- expected_values:
     TQ_FR: 9
   response: 7E803418E86
 - expected_values:
