Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -885,6 +885,23 @@ test_cases:
     7E829C2E5C000000000
     7E82A68FBDEF695E0AA
 - expected_values:
+    KIA_KNOCK_RETARD_1_E019: -2.25
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: -3
+    KIA_KNOCK_RETARD_4_E019: -3
+  response: |-
+    7E8104B62E019FFE7E7
+    7E821670149004F004B
+    7E822005700F8FBF4F1
+    7E823F4F30000FCFFFB
+    7E824FBFBFB00000F0B
+    7E825120B13090000B6
+    7E82601880100007E70
+    7E827000000000A0017
+    7E8280000000000F5EE
+    7E82902E2C000000000
+    7E82AA8F8C7F417DEAA
+- expected_values:
     KIA_KNOCK_RETARD_1_E019: -1.5
     KIA_KNOCK_RETARD_2_E019: -2.25
     KIA_KNOCK_RETARD_3_E019: -2.25
